fixed clipped earth icon in navigation path
git-svn-id: https://opensource.kantega.no/svn/openaksess/trunk@1717 fd808399-8219-4f14-9d4c-37719d9ec93d

--- a/modules/webapp/src/webapp/admin/css/navigate.css
+++ b/modules/webapp/src/webapp/admin/css/navigate.css
@@ -114,7 +114,7 @@ ul.breadcrumbs li {
     padding-right: 3px;
 }
 ul.breadcrumbs li:first-child {
-    background: url("../bitmaps/sprite-common.png") no-repeat -159px -1460px;
+    background: url("../bitmaps/sprite-common.png") no-repeat -159px -1459px;
     padding-left: 18px;
 }
 
